--- a/Spark-ui/src/styles/comm.scss
+++ b/Spark-ui/src/styles/comm.scss
@@ -17,6 +17,20 @@
   height: 60px;
 }
 
+.top-search2 {
+  margin-top: 10px;
+  background-color: white;
+  padding: 20px;
+  height: 180px;
+}
+
+.top-search3 {
+  margin-top: 10px;
+  background-color: white;
+  padding: 20px;
+  height: 100px;
+}
+
 .table-body {
   margin-top: 0px;
   padding: 20px;
